--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "msgpack-rpc-lite",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Implementation of MessagePack-RPC with msgpack-lite",
   "main": "./dist/index.js",
   "scripts": {
-    "test": "nyc -a -e '.ts' -r lcovonly -r text mocha -R spec --recursive -r ts-node/register \"test/**/*.ts\" -r source-map-support/register",
+    "test": "nyc -a -e '.ts' -n \"src/**\" -r lcovonly -r text mocha -R spec --recursive -r ts-node/register \"test/**/*.ts\" -r source-map-support/register",
     "prepare": "tsc"
   },
   "repository": {
