--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.3",
   "description": "Implementation of MessagePack-RPC with msgpack-lite",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "nyc -a -e '.ts' -n \"src/**\" -r lcovonly -r text mocha -R spec --recursive -r ts-node/register \"test/**/*.ts\" -r source-map-support/register",
     "prepare": "tsc"
