--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ node_js:
 - 6
 before_script:
 - if [ $(echo "$(npm -v 2>&1 | cut -d. -f-2) < 4.2" | bc) -eq 1 ]; then npm run prepare; fi
-script:
-- npm test && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage
+after_success:
+- ./node_modules/.bin/codacy-coverage < coverage/lcov.info
+- ./node_modules/.bin/codecov
 before_deploy:
 - if [ $(echo "$(npm -v 2>&1 | cut -d. -f-2) < 4.2" | bc) -eq 1 ]; then npm run prepare; fi
 deploy:
