--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^9.4.7",
     "chai": "^4.1.2",
     "codacy-coverage": "^2.0.3",
+    "codecov": "^3.0.0",
     "debug": "^3.1.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.0.0",
